--- a/temps/templates/crudEcho.tmpl
+++ b/temps/templates/crudEcho.tmpl
@@ -1,49 +1,4 @@
-package temps
 
-import (
-	"fmt"
-	"os"
-	"strings"
-	"text/template"
-)
-
-func CurdFrameEcho() {
-
-	// ############################################################
-	RenderData.AppName = replaceString(RenderData.AppName)
-
-	curd_tmpl, err := template.New("RenderData").Funcs(FuncMap).Parse(curdTemplate)
-	if err != nil {
-		panic(err)
-	}
-
-	// Create the models directory if it does not exist
-	// #################################################
-	err = os.MkdirAll("controllers", os.ModePerm)
-	if err != nil {
-		panic(err)
-	}
-
-	for _, model := range RenderData.Models {
-
-		folder_path := fmt.Sprintf("controllers/%v_controller.go", model.Name)
-		folder_path = strings.ToLower(folder_path)
-		curd_file, err := os.Create(folder_path)
-		if err != nil {
-			panic(err)
-		}
-
-		err = curd_tmpl.Execute(curd_file, model)
-		if err != nil {
-			panic(err)
-		}
-		curd_file.Close()
-
-	}
-
-}
-
-var curdTemplate = `
 package controllers
 
 import (
@@ -514,7 +469,7 @@ func Add{{.FieldName}}{{.ParentName}}s(contx echo.Context) error {
 	}
 
 	tx := db.WithContext(tracer.Tracer).Begin()
-	if err := db.WithContext(tracer.Tracer).Model(&{{.LowerFieldName}}).Association("{{.ParentName}}s").Append(&{{.LowerParentName}}); err != nil {
+	if err := tx.WithContext(tracer.Tracer).Model(&{{.LowerFieldName}}).Association("{{.ParentName}}s").Append(&{{.LowerParentName}}); err != nil {
 		tx.Rollback()
 		return contx.JSON(http.StatusNotFound, common.ResponseHTTP{
 			Success: false,
@@ -783,7 +738,7 @@ func Delete{{.FieldName}}{{.ParentName}}s(contx echo.Context) error {
 
 	// removing {{.LowerParentName}}
 	tx := db.WithContext(tracer.Tracer).Begin()
-	if err := db.WithContext(tracer.Tracer).Model(&{{.LowerFieldName}}).Association("{{.ParentName}}s").Delete(&{{.LowerParentName}}); err != nil {
+	if err := tx.WithContext(tracer.Tracer).Model(&{{.LowerFieldName}}).Association("{{.ParentName}}s").Delete(&{{.LowerParentName}}); err != nil {
 		tx.Rollback()
 		return contx.JSON(http.StatusNonAuthoritativeInfo, common.ResponseHTTP{
 			Success: false,
@@ -1025,7 +980,7 @@ func Add{{.FieldName}}{{.ParentName}}s(contx echo.Context) error {
 
 	tx := db.WithContext(tracer.Tracer).Begin()
 	//  Adding one to many Relation
-	if err := db.WithContext(tracer.Tracer).Model(&{{.LowerParentName}}).Association("{{.FieldName}}s").Append(&{{.LowerFieldName}}); err != nil {
+	if err := tx.WithContext(tracer.Tracer).Model(&{{.LowerParentName}}).Association("{{.FieldName}}s").Append(&{{.LowerFieldName}}); err != nil {
 		tx.Rollback()
 		return contx.JSON(http.StatusNotFound, common.ResponseHTTP{
 			Success: false,
@@ -1104,7 +1059,7 @@ func Delete{{.FieldName}}{{.ParentName}}s(contx echo.Context) error {
 
 	// Removing {{.FieldName}} From {{.ParentName}}
 	tx := db.WithContext(tracer.Tracer).Begin()
-	if err := db.WithContext(tracer.Tracer).Model(&{{.LowerParentName}}).Association("{{.FieldName}}s").Delete(&{{.LowerFieldName}}); err != nil {
+	if err := tx.WithContext(tracer.Tracer).Model(&{{.LowerParentName}}).Association("{{.FieldName}}s").Delete(&{{.LowerFieldName}}); err != nil {
 		tx.Rollback()
 		return contx.JSON(http.StatusNotFound, common.ResponseHTTP{
 			Success: false,
@@ -1123,6 +1078,3 @@ func Delete{{.FieldName}}{{.ParentName}}s(contx echo.Context) error {
 }
 {{- end}}
 {{- end}}
-
-
-`
