--- a/temps/templates/django.tmpl
+++ b/temps/templates/django.tmpl
@@ -74,7 +74,7 @@
           {
             "name": "Username",
             "type": "string",
-            "annotation": "gorm:\"not null; unique;\" json:\"username,omitempty\"",
+            "annotation": "gorm:\"not null; unique; type:string;\" json:\"username,omitempty\"",
             "curd_flag": "true$true$true$true$false$false"
           },
           {
@@ -92,7 +92,7 @@
           {
             "name": "Email",
             "type": "string",
-            "annotation": "gorm:\"not null; unique;\" json:\"email,omitempty\"",
+            "annotation": "gorm:\"not null; unique; type:string;\" json:\"email,omitempty\"",
             "curd_flag": "true$true$true$true$false$false"
           },
           {
