--- a/temps/templates/fiberLogin.tmpl
+++ b/temps/templates/fiberLogin.tmpl
@@ -2,19 +2,23 @@ package controllers
 
 import (
 	"net/http"
+	
+	{{- if eq .AuthAppName .CurrentAppName }}
 	"time"
 	"fmt"
-
 	"{{.ProjectName}}/{{ .CurrentAppName}}/models"
 	"{{.ProjectName}}/{{ .CurrentAppName}}/utils"
+	"github.com/go-playground/validator/v10"
+	{{- end }}
 
 	"{{.ProjectName}}/common"
 	"{{.ProjectName}}/observe"
-	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
 	"gorm.io/gorm"
 )
 
+{{- if eq .AuthAppName .CurrentAppName }}
+	
 // Login Request for Endpoint
 type LoginPost struct {
 	GrantType string {{.BackTick}}json:"grant_type" validate:"required" example:"authorization_code,refresh_token,token_decode"{{.BackTick}}
@@ -387,6 +391,7 @@ func Login(contx *fiber.Ctx) error {
 		})
 	}
 }
+{{- end}}
 {{- end}}
 
 // ###############################################################################
